--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ show_excerpts: true
 excerpt_separator: <!--more-->
 
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 redcarpet:
   extensions:
     - no_intra_emphasis
