--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 _site
 .sass-cache
 .jekyll-metadata
+.DS_Store
+.fontcustom-manifest.json
+uml/
+Gemfile.lock
+_temp/
+_newsletters/send.sh
+gnuplot/
+css/_icons.scss
+_gnuplot/**/*.svg
