--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,7 @@ plugins:
   - jekyll-bits
   - jekyll-sitemap
   - jekyll-redirect-from
+  - jekyll-maps
 
 exclude:
   - README.md
@@ -112,3 +113,8 @@ compress_html:
   clippings: [div, p, ul, td, h1, h2]
   comments: all
   # endings: all
+
+# see https://github.com/ayastreb/jekyll-maps
+maps:
+  google:
+    api_key: AIzaSyAW5GgRpxTUCH_IIp-jIhrDR7faBwdlGNw
